--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "dependencies": {
     "moment": "^2.20.1",
+    "monaco-editor": "^0.12.0",
     "react-json-tree": "^0.11.0",
+    "react-monaco-editor": "^0.14.1",
     "react-paragraph": "^1.0.0",
     "rsuite": "^3.0.2",
     "rsuite-page-nav": "^1.1.5",
@@ -51,7 +53,6 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-rsuite": "0.0.1",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-rsuite": "^1.0.0-beta",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -62,6 +63,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-rsuite": "0.0.1",
     "babel-preset-stage-0": "^6.24.1",
     "brfs": "^1.4.3",
     "chai": "^3.5.0",
@@ -69,6 +71,7 @@
     "classnames": ">=2.0.0",
     "colors": "^1.1.2",
     "compression-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "docsearch.js": "^2.5.2",
